# wallet-core

./: .gitignore  CMakeLists.txt  bootstrap.sh  coins.json
android/: build.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/trustwallet/core/app/blockchains/digitalgold/: TestDigitalGoldAddress.kt  TestDigitalGoldSigner.kt
android/app/src/main/java/com/trustwallet/core/app/: MainActivity.kt
android/trustwalletcore/: build.gradle
cmake/: Protobuf.cmake
codegen/lib/templates/: hrp.cpp.erb  hrp.h.erb
docker/wallet-core/: Dockerfile
docs/: coins.md
include/TrustWalletCore/: TWCoinType.h
jni/cpp/: Random.cpp
jni/java/wallet/core/java/: AnySigner.java
samples/cpp/: CMakeLists.txt
src/: Base58.cpp  Base58Address.h  BinaryCoding.h  Coin.cpp  Data.h  Encrypt.cpp  HDWallet.cpp
src/Algorand/: Entry.cpp  Signer.cpp  Signer.h  Transaction.h
src/Bitcoin/: DgldAddress.cpp  DgldAddress.h  Entry.cpp  Entry.h  Script.h
src/Filecoin/: Address.cpp
src/Keystore/: StoredKey.cpp  StoredKey.h
src/NEO/: ReadData.cpp  ReadData.h
src/Nebulas/: Address.cpp
src/Waves/: Address.cpp
src/interface/: TWStoredKey.cpp
swift/Tests/Blockchains/: DigitalGoldTests.swift
tests/DigitalGold/: AddressTests.cpp  SignerTests.cpp  TWAnyAddressTests.cpp  TWAnySignerTests.cpp  TWCoinTypeTests.cpp
tests/interface/: TWStoredKeyTests.cpp  TWTestUtilities.cpp
tools/: install-dependencies
trezor-crypto/src/: bip32.c
walletconsole/lib/: Coins.cpp  Util.cpp  Util.h
